@@ -1,3 +1,8 @@
+2020-07-03 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/widgets/geda_radio_menu_item.c: Update Free Software Foundation
+      address.
+
 2020-06-19 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_menu_bar.c: Rename viewable_menu_bars ->
